Gateway for unified swagger
